<resources>
    <string name="app_name">Math Up</string>
    <string name="todo">TODO</string>
    <string name="tag_line">Math made easy</string>
    <string name="flash_math">Flash Math</string>
    <string name="addition">Addition</string>
    <string name="division">Division</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="practice_multiplication">Practice Multiplication</string>
    <string name="flash_cards">Flash Cards</string>
    <string name="table">TABLE</string>
    <string name="_1_x_1">1 X 1</string>
    <string name="start">Start</string>
    <string name="next">NEXT</string>
    <string name="tutorial">Tap the card to reveal the answer.</string>
    <string name="_1x1_1">1x1=1</string>
    <string name="_1">1</string>
    <string name="thanks">Thanks for downloading this application. \n To God be the glory!</string>
    <string name="about">About</string>
    <string name="develop_by_notalone">Developer: not alone \n Music and sound fx: zapsplat.com</string>
    <string name="follow_me_on_twitter">Follow me on twitter:</string>
    <string name="ncel">\@nceldatingaling</string>
    <string name="music_and_sound_fx_by_zapsplat_com">Music and sound fx: zapsplat.com</string>
    <string name="copyright">Copyright &#169; 2021 not alone. All rights reserved. </string>
    <string name="found_words">Found Words</string>
    <string name="encourage">Encourage</string>
    <string name="_9">9</string>
    <string name="times">X</string>
    <string name="_81">81</string>
    <string name="play">PLAY</string>
    <string name="cards">CARDS</string>
    <string name="grade">Grades</string>
    <string name="_100">100%</string>
    <string name="track_your_progress">Track your progress</string>
    <string name="reset">Reset</string>
    <string name="practice">Practice</string>
    <string name="level_1">Level 1</string>
    <string name="lvl1">Level 1</string>
    <string name="lvl2">Level 2</string>
    <string name="lvl3">Level 3</string>
    <string name="lvl4">Level 4</string>
    <string name="lvl15">Level 5</string>
    <string name="lvl6">Level 6</string>
    <string name="lvl7">Level 7</string>
    <string name="lvl8">Level 8</string>
    <string name="lvl9">Level 9</string>
    <string name="lvl10">Level 10</string>
    <string name="lvl11">Level 11</string>
    <string name="lvl12">Level 12</string>
    <string name="loading_screen">%1$d</string>
    <string name="time_over">Time Over</string>
    <string name="average_percentage">Average Percentage</string>
    <string name="x1">1</string>
    <string name="x2">2</string>
    <string name="x3">3</string>
    <string name="x4">4</string>
    <string name="x5">5</string>
    <string name="x6">6</string>
    <string name="x7">7</string>
    <string name="x8">8</string>
    <string name="x9">9</string>
    <string name="x10">10</string>
    <string name="x11">11</string>
    <string name="x12">12</string>
    <string name="my_banner">ca-app-pub-3940256099942544/6300978</string>
    <string name="my_ins">ca-app-pub-3450432899410605/962188</string>
    <string name="test_ad_banner">ca-app-pub-3940256099942544/6978111</string>
    <string name="test_ad_interstitial">ca-app-pub-3940256099942544/103712</string>
    <string name="percent_menu">%</string>
    <string name="please_connect_to_internet">Please connect to internet</string>
    <string name="retry">Retry</string>
    <string name="you_must_be_online_to_enjoy_the_app">You must be online to enjoy the app</string>
    <string name="exit_message">Press again to exit</string>
    <string name="home">Home</string>
    <string name="cards_small">Cards</string>
    <string name="true_or_false">True or False</string>
    <string name="practice_quiz">Practice Quiz</string>
    <string name="multiplication_table">Multiplication Table</string>
    <string name="level">Level </string>
    <string name="more">MORE</string>
    <string name="timer">Timer</string>
    <string name="slow">Slow</string>
    <string name="normal">Normal</string>
    <string name="fast">Fast</string>
    <string name="close">Close</string>
    <string name="select_game">SELECT GAME</string>
    <string name="play_random">Play Random</string>
    <string name="score">Score:</string>
    <string name="level_up">Level Up!</string>
    <string name="ad_flag">Ad</string>

    <string name="do_you_really_want_to_clear_the_data">Do you really want to clear the data?</string>
    <string name="an_ad_will_be_displayed_n_thank_you_for_the_support">An Ad will be displayed. \n Thank you for the support.</string>
</resources>