<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@drawable/curve_bg_white"
    android:padding="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_gravity="center"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:text="@string/timer"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:fontFamily="@font/passion_one_bold"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/slow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/curve_bg_red"
            android:text="@string/slow"
            android:fontFamily="@font/passion_one_bold"
            android:elevation="10dp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="28sp"
            tools:targetApi="lollipop"/>

        <Button
            android:id="@+id/normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/curve_bg_red"
            android:text="@string/normal"
            android:fontFamily="@font/passion_one_bold"
            android:elevation="10dp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="28sp"
            tools:targetApi="lollipop"/>

        <Button
            android:id="@+id/fast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/curve_bg_red"
            android:text="@string/fast"
            android:fontFamily="@font/passion_one_bold"
            android:elevation="10dp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="28sp"
            tools:targetApi="lollipop"/>


        <Button
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/green"
            android:text="@string/close"
            android:fontFamily="@font/passion_one_bold"
            android:elevation="10dp"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="#fff"
            android:textSize="20sp"
            tools:targetApi="lollipop"/>

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>