<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/card"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/yellow1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:textColor="@color/blue_text"
            android:fontFamily="@font/passion_one_bold"
            android:elevation="16dp"
            android:gravity="center"
            tools:targetApi="lollipop"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/yellow2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/thanks"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/black_text"
            android:fontFamily="@font/quicksand_regular"
            android:background="@color/colorPrimary"
            android:elevation="16dp"
            android:gravity="center"
            tools:targetApi="lollipop"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/yellow3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/develop_by_notalone"
            android:textAllCaps="false"
            android:textColor="@color/black_text"
            android:textSize="16sp"
            android:fontFamily="@font/quicksand_regular"
            android:background="@color/colorPrimary"
            android:elevation="16dp"
            android:gravity="center"
            tools:targetApi="lollipop"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/yellow4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:elevation="16dp"
            app:srcCompat="@drawable/ic_baseline_home_24"
            app:tint="@color/black_text"
            android:gravity="center"
            tools:targetApi="lollipop"
            android:contentDescription="@string/todo" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>