<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_title"
        android:background="@drawable/curve_bg_yellow"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="20dp"
        android:padding="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        tools:targetApi="lollipop">

        <ImageButton
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@id/card_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="@color/blue_text"
            app:srcCompat="@drawable/ic_baseline_music_note_24" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/passion_one_bold"
            android:text="@string/app_name"
            android:textColor="@color/blue_text"
            android:textSize="52sp"/>

        <com.techgeeks.notalone.number.huawei.TypeWriter
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="casual"
            android:text="@string/tag_line"
            android:textColor="#221F1C"
            android:textSize="20sp" />

        <Button
            android:id="@+id/flash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:alpha="0.95"
            android:background="@drawable/button_bg_red_up"
            android:elevation="18dp"
            android:fontFamily="@font/passion_one_bold"
            android:padding="12dp"
            android:text="@string/select_game"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:targetApi="lollipop" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/card_menu"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#005C6BC0"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/card_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.20"
        tools:targetApi="lollipop">


        <Button
            android:id="@+id/play_random"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:alpha="0.95"
            android:background="@drawable/curve_bg_white"
            android:elevation="10dp"
            android:fontFamily="@font/passion_one_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/play_random"
            android:textColor="@color/red_numColor"
            android:textSize="24sp"
            tools:targetApi="lollipop" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/card_menu2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:background="#005C6BC0"
        app:layout_constraintTop_toBottomOf="@id/card_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        tools:targetApi="lollipop">


        <ImageButton
            android:id="@+id/info"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:alpha="0.95"
            android:background="@drawable/curve_bg_white"
            app:srcCompat="@drawable/ic_baseline_info_24"
            android:tint="@color/red_numColor"
            android:elevation="4dp"
            android:gravity="center"
            android:padding="10dp"
            tools:targetApi="lollipop"
            android:contentDescription="@string/todo" />
        <ImageButton
            android:id="@+id/grades"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:alpha="0.95"
            android:background="@drawable/curve_bg_white"
            android:elevation="4dp"
            android:fontFamily="@font/passion_one_regular"
            app:srcCompat="@drawable/ic_baseline_school_24"
            android:tint="@color/red_numColor"
            android:gravity="center"
            android:padding="10dp"
            tools:targetApi="lollipop"
            android:contentDescription="@string/todo" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>